<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.panayotis.jubler</groupId>
    <artifactId>project</artifactId>
    <packaging>pom</packaging>
    <version>8.0.0</version>
    <name>Jubler Project</name>
    <modules>
        <module>modules/core</module>
        <module>modules/aspell</module>
        <module>modules/autoupdate</module>
        <module>modules/basetextsubs</module>
        <module>modules/coretools</module>
        <module>modules/mplayer</module>
        <module>modules/zemberek</module>
        <module>modules/azuretranslate</module>
        <module>modules/coretheme</module>
        <module>modules/launcher</module>
        <module>modules/installer</module>
        <module>modules/vlcj-jubler</module>
    </modules>

    <properties>
        <long.version>7.0.1.0</long.version>
        <release.version>1325</release.version> <!-- git rev-list - -count HEAD -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <json.version>0.9.5</json.version>
    </properties>
</project>
